Changed contact info into my own

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="resume">
     <div class="container">
       <div class="resume__block">
-        <h1 class="contact-info__header">Bulka</h1>
-        <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+        <h1 class="contact-info__header">Maksym Kulbako</h1>
+        <h3 class="contact-info__sub-header">Trainee Front-end Developer</h3>
 
         <div class="contact_info_container fh">
           <div class="contact-info__block">
@@ -24,14 +24,14 @@
                     </path>
                   </svg>
                 </div>
-                <span>Lviv, Ukraine</span>
+                <span>Dresden, Germany</span>
               </a>
           </div>
           <div class="contact-info__block contact-info__block--center">
-            <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
+            <img class="contact-info__avatar" src="https://res.cloudinary.com/dd69ztxsd/image/upload/v1687116401/My/ava_kulbako_qbifbz.jpg" alt="Avatar">
           </div>
           <div class="contact-info__block">
-            <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author" class="contact-info__item">
+            <a href="https://www.linkedin.com/in/maksym-kulbako-69028847/" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path
@@ -39,7 +39,7 @@
                     </path>
                   </svg>
                 </div>
-                <span>binary-studio</span>
+                <span>maksym-kulbako</span>
               </a>
           </div>
         </div>
