--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
                 </path>
               </svg>
             </div>
-            <p class="intro_text">Meow.
-              I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil, 
-              all I do is sleep and try to help out hoomans with their projects whenever 
-              they need me.
+            <p class="intro_text">Highly motivated and skilled Front-end Developer with experience in JavaScript, and React. I am able to develop and maintain web applications, implement new solutions and technologies, and create user-facing features. Strive to adhere to best practices for producing clear, well-structured, cross-browser, testable, scalable, and high-quality code. I am looking for a dynamic team to continue improving my skills in a friendly environment and reaching my full potential as a developer.
             </p>
           </div>
         </div>
