--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="resume__block">
+          <div class="skills">
+            <h3 class="skills__header">Skills</h3>
+            <p class="skills__text">JavaScript, TypeScript, React, Redux, GIT, HTML, CSS, REST API </p>
+          </div>
+        </div>
+      </div>
   </div>
 </main>
   </body>
