Added Languages block

--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="resume__block">
+          <div class="skills">
+            <h3 class="skills__header">Languages</h3>
+            <p class="skills__text">Ukrainian(Native), English(Professional working proficiency), German(Elementary proficiency)</p>
+          </div>
+        </div>
+      </div>
   </div>
 </main>
   </body>
