Added exoerience block

--- a/index.html
+++ b/index.html
@@ -76,6 +76,59 @@
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="resume__block">
+          <div class="main-info fh">
+            <div class="experiences">
+                <h3 class="experiences__header">Experience</h3>
+                <div class="experiences__company">
+                    <div class="experiences__company-header">
+                      <span class="experiences__company-header-durability">Nov 2022 - Present</span>
+                      <h3 class="experiences__company-header-name">NanaYogaStudio</h3>
+                    </div>
+                    <div class="experiences__company-project">
+                      <h3 class="experiences__company-project-name">Yoga Studo App</h3>
+                      <ul class="experiences__company-project-responsibilities">
+                          <li>Developed design layout with Figma</li>
+                          <li>Developed and configured front-end part of the app</li>
+                          <li>Design app using CSS(SaSS) with a responsive layout</li>
+                          <li>WDeveloped storage and transportation system based on Redux</li>
+                          <li>Developed various components such as form text field, buttons,  lists, pop-ups</li>
+                      </ul>
+                    </div>
+                </div>
+                <div class="experiences__company">
+                  <div class="experiences__company-header">
+                      <span class="experiences__company-header-durability">May 2022 - Mar 2023</span>
+                      <h3 class="experiences__company-header-name">Education projects</h3>
+                  </div>
+                  <div class="experiences__company-project">
+                    <h3 class="experiences__company-project-name">Rick&Morty`s</h3>
+                    <ul class="experiences__company-project-responsibilities">
+                        <li>Developed design with HTML and SCSS based on Figma layout</li>
+                        <li>Developed API interaction to receive data from the server</li>
+                        <li>Developed a search bar based on HTML requests, which allows saving searching parameters after refrashing an app</li>
+                        <li>Developed an interaction between Firebase and front-end part of the app for the ability to Sign-up with Google acc</li>
+                    </ul>
+                  </div>
+                  <div class="experiences__company-project">
+                    <h3 class="experiences__company-project-name">Chat-app</h3>
+                    <ul class="experiences__company-project-responsibilities">
+                        <li>Developed and configured front-end part of the app based on common user requirements</li>
+                        <li>Design app using CSS, CSS layout directly in React styled components based on components from MUI Library</li>
+                        <li>DDeveloped API to connect front-end with back-end part of the app</li>
+                        <li>Developed storage and transportation system based on Redux and WebSocket.io for sending and receiving messages</li>
+                        <li>Developed various components such as form text field, buttons, and list with the ability to select, or delete one of the list items</li>
+                    </ul>
+                  </div>
+                </div>
+            </div>
+          </div>
+
+          <div class="additional-info fv"></div>
+        </div>
+      </div>
+    </div>
   </div>
 </main>
   </body>
