--- a/index.html
+++ b/index.html
@@ -70,14 +70,6 @@
       </div>
       <div class="container">
         <div class="resume__block">
-          <div class="skills">
-            <h3 class="skills__header">Languages</h3>
-            <p class="skills__text">Ukrainian(Native), English(Professional working proficiency), German(Elementary proficiency)</p>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="resume__block">
           <div class="main-info fh">
             <div class="experiences">
                 <h3 class="experiences__header">Experience</h3>
@@ -123,9 +115,29 @@
                   </div>
                 </div>
             </div>
+            <div class="additional-info fv">
+              <div class="additional-info__education">
+                <h3 class="additional-info__education-header">Education</h3>
+                <div class="additional-info__education-university">
+                  <span class="additional-info__education-university-durability">2022</span>
+                  <h3 class="additional-info__education-university-speciality">Front-end Pro</h3>
+                  <p class="additional-info__education-university-name">Hillel IT School</p>
+                </div>
+              </div>          
+              <div class="additional-info__languages">
+                <h3 class="additional-info__languages-header">Languages</h3>
+                <p class="additional-info__languages-item">
+                  Ukrainian (Native)
+                </p>
+                <p class="additional-info__languages-item">
+                  English(Professional working proficiency)
+                </p>
+                <p class="additional-info__languages-item">
+                  German(Elementary proficiency)
+                </p>
+              </div>
+            </div>
           </div>
-
-          <div class="additional-info fv"></div>
         </div>
       </div>
     </div>
