--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@
                     </ul>
                   </div>
                 </div>
+                <div class="experiences__company">
+                  <div class="experiences__company-header">
+                    <span class="experiences__company-header-durability">2007 - 2009</span>
+                    <h3 class="experiences__company-header-name">Judge’s Associate in Poltavsky Regional Court</h3>
+                  </div>
+                </div>
+                <div class="experiences__company">
+                  <div class="experiences__company-header">
+                    <span class="experiences__company-header-durability">2009-2022</span>
+                    <h3 class="experiences__company-header-name">Attorney At Law</h3>
+                  </div>
+                </div>
             </div>
             <div class="additional-info fv">
               <div class="additional-info__education">
@@ -122,6 +134,11 @@
                   <span class="additional-info__education-university-durability">2022</span>
                   <h3 class="additional-info__education-university-speciality">Front-end Pro</h3>
                   <p class="additional-info__education-university-name">Hillel IT School</p>
+                </div>
+                <div class="additional-info__education-university">
+                  <span class="additional-info__education-university-durability">2009</span>
+                  <h3 class="additional-info__education-university-speciality">Master’s Degree / Law</h3>
+                  <p class="additional-info__education-university-name">Yaroslav Mudryi National Law Academy</p>
                 </div>
               </div>          
               <div class="additional-info__languages">
