--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                     </div>
                     <div class="experiences__company-project">
                       <h3 class="experiences__company-project-name">Yoga Studo App</h3>
+                      <a class="experiences__company-project-link" href="https://maxkulbako.github.io/yoga_app/" target="_blank"> 
+                        <svg class="experiences__company-project-svg" viewBox="0 0 32 32"><g id="Global"><path d="M28,21a13.091,13.091,0,0,1-8.61,7.54A20.794,20.794,0,0,0,21.66,21Z"/><path d="M19.66,21c-.72,4.99-2.41,8-3.66,8s-2.94-3.01-3.66-8Z"/><path d="M12.61,28.54A13.091,13.091,0,0,1,4,21h6.34A20.794,20.794,0,0,0,12.61,28.54Z"/><path d="M10,16c0,1,.04,2.01.12,3H3.36a12.68,12.68,0,0,1,0-6h6.76C10.04,13.99,10,15,10,16Z"/><path d="M20,16q0,1.575-.12,3H12.12Q12,17.575,12,16t.12-3h7.76Q20,14.425,20,16Z"/><path d="M29,16a12.9,12.9,0,0,1-.36,3H21.88c.08-.99.12-2,.12-3s-.04-2.01-.12-3h6.76A12.9,12.9,0,0,1,29,16Z"/><path d="M28,11H21.66a20.794,20.794,0,0,0-2.27-7.54A13.091,13.091,0,0,1,28,11Z"/><path d="M19.66,11H12.34c.72-4.99,2.41-8,3.66-8S18.94,6.01,19.66,11Z"/><path d="M12.61,3.46A20.794,20.794,0,0,0,10.34,11H4A13.091,13.091,0,0,1,12.61,3.46Z"/></g></svg>
+                      </a>
                       <ul class="experiences__company-project-responsibilities">
                           <li>Developed design layout with Figma</li>
                           <li>Developed and configured front-end part of the app</li>
@@ -96,6 +99,9 @@
                   </div>
                   <div class="experiences__company-project">
                     <h3 class="experiences__company-project-name">Rick&Morty`s</h3>
+                    <a class="experiences__company-project-link" href="https://maxkulbako.github.io/rick_and_morty/" target="_blank"> 
+                      <svg class="experiences__company-project-svg" viewBox="0 0 32 32"><g id="Global"><path d="M28,21a13.091,13.091,0,0,1-8.61,7.54A20.794,20.794,0,0,0,21.66,21Z"/><path d="M19.66,21c-.72,4.99-2.41,8-3.66,8s-2.94-3.01-3.66-8Z"/><path d="M12.61,28.54A13.091,13.091,0,0,1,4,21h6.34A20.794,20.794,0,0,0,12.61,28.54Z"/><path d="M10,16c0,1,.04,2.01.12,3H3.36a12.68,12.68,0,0,1,0-6h6.76C10.04,13.99,10,15,10,16Z"/><path d="M20,16q0,1.575-.12,3H12.12Q12,17.575,12,16t.12-3h7.76Q20,14.425,20,16Z"/><path d="M29,16a12.9,12.9,0,0,1-.36,3H21.88c.08-.99.12-2,.12-3s-.04-2.01-.12-3h6.76A12.9,12.9,0,0,1,29,16Z"/><path d="M28,11H21.66a20.794,20.794,0,0,0-2.27-7.54A13.091,13.091,0,0,1,28,11Z"/><path d="M19.66,11H12.34c.72-4.99,2.41-8,3.66-8S18.94,6.01,19.66,11Z"/><path d="M12.61,3.46A20.794,20.794,0,0,0,10.34,11H4A13.091,13.091,0,0,1,12.61,3.46Z"/></g></svg>
+                    </a>
                     <ul class="experiences__company-project-responsibilities">
                         <li>Developed design with HTML and SCSS based on Figma layout</li>
                         <li>Developed API interaction to receive data from the server</li>
@@ -105,6 +111,9 @@
                   </div>
                   <div class="experiences__company-project">
                     <h3 class="experiences__company-project-name">Chat-app</h3>
+                    <a class="experiences__company-project-link" href="https://maxkulbako.github.io/chat-app/" target="_blank"> 
+                      <svg class="experiences__company-project-svg" viewBox="0 0 32 32"><g id="Global"><path d="M28,21a13.091,13.091,0,0,1-8.61,7.54A20.794,20.794,0,0,0,21.66,21Z"/><path d="M19.66,21c-.72,4.99-2.41,8-3.66,8s-2.94-3.01-3.66-8Z"/><path d="M12.61,28.54A13.091,13.091,0,0,1,4,21h6.34A20.794,20.794,0,0,0,12.61,28.54Z"/><path d="M10,16c0,1,.04,2.01.12,3H3.36a12.68,12.68,0,0,1,0-6h6.76C10.04,13.99,10,15,10,16Z"/><path d="M20,16q0,1.575-.12,3H12.12Q12,17.575,12,16t.12-3h7.76Q20,14.425,20,16Z"/><path d="M29,16a12.9,12.9,0,0,1-.36,3H21.88c.08-.99.12-2,.12-3s-.04-2.01-.12-3h6.76A12.9,12.9,0,0,1,29,16Z"/><path d="M28,11H21.66a20.794,20.794,0,0,0-2.27-7.54A13.091,13.091,0,0,1,28,11Z"/><path d="M19.66,11H12.34c.72-4.99,2.41-8,3.66-8S18.94,6.01,19.66,11Z"/><path d="M12.61,3.46A20.794,20.794,0,0,0,10.34,11H4A13.091,13.091,0,0,1,12.61,3.46Z"/></g></svg>
+                    </a>
                     <ul class="experiences__company-project-responsibilities">
                         <li>Developed and configured front-end part of the app based on common user requirements</li>
                         <li>Design app using CSS, CSS layout directly in React styled components based on components from MUI Library</li>
