--- a/index.html
+++ b/index.html
@@ -92,7 +92,16 @@
         <div class="resume__block">
           <div class="skills">
             <h3 class="skills__header">Skills</h3>
-            <p class="skills__text">JavaScript, TypeScript, React, Redux, GIT, HTML, CSS, REST API </p>
+            <div class="skills__wrapper">
+              <p class="skills__text">JavaScript </p>
+              <p class="skills__text">TypeScript </p>
+              <p class="skills__text">React </p>
+              <p class="skills__text">GIT </p>
+              <p class="skills__text">HTML </p>
+              <p class="skills__text">CSS </p>
+              <p class="skills__text">REST API </p>
+            </div>
+            <!-- <p class="skills__text">JavaScript, TypeScript, React, Redux, GIT, HTML, CSS, REST API </p> -->
           </div>
         </div>
       </div>
@@ -184,10 +193,10 @@
                   Ukrainian (Native)
                 </p>
                 <p class="additional-info__languages-item">
-                  English(Professional working proficiency)
+                  English (Professional working proficiency)
                 </p>
                 <p class="additional-info__languages-item">
-                  German(Elementary proficiency)
+                  German (Elementary proficiency)
                 </p>
               </div>
             </div>
