--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             <h3 class="contact-info__sub-header">
               Trainee Front-end Developer
             </h3>
-
             <div class="contact_info_container fh">
               <div class="contact-info__block">
                 <a href="" rel="author" class="contact-info__item">
@@ -479,6 +478,30 @@
                   </p>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="resume__block">
+            <h3 class="interests__header">Interests</h3>
+            <div class="interests">
+              <div class="interests__icon-wrapper">
+                <svg
+                  class="interests__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 512 512"
+                >
+                  <path
+                    d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"
+                  ></path>
+                </svg>
+              </div>
+              <p class="interests_text">
+                In my free time, I enjoy reading books, watching TV shows,
+                traveling, long-distance walking, cycling, and spending time
+                with my two dogs. These interests fuel my curiosity, broaden my
+                perspective, keep me active, and bring me joy.
+              </p>
             </div>
           </div>
         </div>
